--- a/test.html
+++ b/test.html
@@ -2,78 +2,21 @@
 <html>
   <head>
     <style>
-      * {
-        box-sizing: border-box;
+      .ifr-div {
+        width: 360px;
+        height: 600px;
       }
-      h1 {
-        color: green;
-      }
-
-      /* toggle in label designing */
-      .toggle {
-        position: relative;
-        display: inline-block;
-        width: 50px;
-        height: 27px;
-        background-color: red;
-        border-radius: 30px;
-        border: 2px solid gray;
-      }
-
-      /* After slide changes */
-      .toggle::after {
-        content: "";
-        position: absolute;
-        width: 50%;
-        height: 100%;
-        border-radius: 50%;
-        background-color: gray;
-        top: 1px;
-        left: 1px;
-        transition: all 0.5s;
-      }
-
-      /* Toggle text */
-      p {
-        font-family: Arial, Helvetica, sans-serif;
-        font-weight: bold;
-      }
-
-      /* Checkbox checked effect */
-      .checkbox:checked + .toggle::after {
-        left: 25px;
-      }
-
-      /* Checkbox checked toggle label bg color */
-      .checkbox:checked + .toggle {
-        background-color: green;
-      }
-
-      /* Checkbox vanished */
-      .checkbox {
-        display: none;
-      }
-      /* kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk */
-
-      /* Selects the <h3> element that comes right after an <h2> element */
-      h3 ~ h3 {
-        color: red;
-      }
-      .img-container {
-        width: 45%;
-        height: 100%;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .img-container img {
-        width: 99%;
-        height: 99%;
+      iframe {
+        width: 95%;
+        height: 95%;
       }
     </style>
   </head>
   <body>
     <h1>Test</h1>
+    <div class="ifr-div">
+      <iframe src="./index.html" frameborder="0"></iframe>
+    </div>
     <script></script>
   </body>
 </html>
